# stl2bmps

./: Build.bat  CMakeLists.txt  OS_Wrapper_Functions.cpp  OS_Wrapper_Functions.h  README.md  b9modelloader.cpp  b9modelloader.h  b9modelwriter.h  convert.cpp  convert.h  loadingbar.h  main.cpp  stl2bmp.cpp  stl2bmp.h
b9edit/: DrawingContext.h  SliceEditView.cpp  SliceEditView.h  aboutbox.cpp  aboutbox.h  b9edit.cpp  b9edit.h
b9layout/: b9layout.cpp  b9layout.h  b9layoutprojectdata.cpp  b9layoutprojectdata.h  b9modelinstance.h  modeldata.cpp  projectdata.cpp  slicecontext.h  sliceset.cpp  worldview.cpp  worldview.h
test/: Lost_Pleiade_Ready.stl  girl.b9l  girl.slc  mypistol.stl  output.slc  temp.b9j  temp.b9l  temp.slc
